--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+# Thymeleaf cache
+spring.thymeleaf.cache=false
+# DataSource parameters
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=
+spring.datasource.password=
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+# enable sql logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
