--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Thymeleaf cache
 spring.thymeleaf.cache=false
 # DataSource parameters
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
 # enable sql logging
