aggiunto nuove sql queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # enable sql logging
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# enable stack trace in error page
+server.error.include-stacktrace=always
+#date time format
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
