--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jpa.properties.hibernate.show_sql=true
